add beginnings of information posting view (forward geocoded location)

--- a/onTheMap/Base.lproj/Main.storyboard
+++ b/onTheMap/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -135,11 +136,18 @@
                                 </connections>
                             </button>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="1bP-nt-v5X">
-                            <connections>
-                                <action selector="refreshMap:" destination="yaU-Fn-jAd" id="9xU-uh-TBY"/>
-                            </connections>
-                        </barButtonItem>
+                        <rightBarButtonItems>
+                            <barButtonItem systemItem="refresh" id="1bP-nt-v5X">
+                                <connections>
+                                    <action selector="refreshMap:" destination="yaU-Fn-jAd" id="9xU-uh-TBY"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem systemItem="add" id="CcV-lG-354">
+                                <connections>
+                                    <segue destination="sRD-ja-5iM" kind="presentation" id="icv-Xg-anv"/>
+                                </connections>
+                            </barButtonItem>
+                        </rightBarButtonItems>
                     </navigationItem>
                     <connections>
                         <outlet property="mapView" destination="UbN-t0-1qd" id="4Rv-id-bx0"/>
@@ -199,16 +207,89 @@
                                 </connections>
                             </button>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="jB4-KF-gkL">
-                            <connections>
-                                <action selector="refreshTable:" destination="ykV-bi-oaN" id="Sy7-sf-bgA"/>
-                            </connections>
-                        </barButtonItem>
+                        <rightBarButtonItems>
+                            <barButtonItem systemItem="refresh" id="jB4-KF-gkL">
+                                <connections>
+                                    <action selector="refreshTable:" destination="ykV-bi-oaN" id="Sy7-sf-bgA"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem systemItem="add" id="8cJ-qU-UTb">
+                                <connections>
+                                    <segue destination="sRD-ja-5iM" kind="presentation" id="jh6-4J-2dt"/>
+                                </connections>
+                            </barButtonItem>
+                        </rightBarButtonItems>
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jok-Nh-GeL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2013.5999999999999" y="626.53673163418296"/>
+        </scene>
+        <!--Find On Map View Controller-->
+        <scene sceneID="VMl-Or-JIi">
+            <objects>
+                <viewController id="pJY-5O-lDb" customClass="FindOnMapViewController" customModule="onTheMap" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="2lr-17-nmK"/>
+                        <viewControllerLayoutGuide type="bottom" id="xpQ-XN-zOQ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="gjr-xH-J48">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="center" spacing="60" translatesAutoresizingMaskIntoConstraints="NO" id="QZS-Tf-frq">
+                                <rect key="frame" x="69" y="233" width="237" height="200.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Where are you studying today?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aFI-Ii-Q3d">
+                                        <rect key="frame" x="0.0" y="0.0" width="237" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Location Here" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wyx-Pi-K7f">
+                                        <rect key="frame" x="28" y="80.5" width="181" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z4u-hh-g6U">
+                                        <rect key="frame" x="59.5" y="170.5" width="118" height="30"/>
+                                        <color key="backgroundColor" red="1" green="0.38250307430000002" blue="0.029188404330000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <state key="normal" title="Find On The Map">
+                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="forwardGeocode:" destination="pJY-5O-lDb" eventType="touchUpInside" id="AfS-YI-B4l"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="QZS-Tf-frq" firstAttribute="centerX" secondItem="gjr-xH-J48" secondAttribute="centerX" id="hrr-Sw-jMU"/>
+                            <constraint firstItem="QZS-Tf-frq" firstAttribute="centerY" secondItem="gjr-xH-J48" secondAttribute="centerY" id="oWx-cO-8Lw"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="1l5-vt-uFx">
+                        <barButtonItem key="rightBarButtonItem" id="nOh-km-g7Y">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="cBq-1v-QD2">
+                                <rect key="frame" x="276" y="7" width="83" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Cancel"/>
+                                <connections>
+                                    <action selector="dismissModal:" destination="pJY-5O-lDb" eventType="touchUpInside" id="k5X-bX-Gqg"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="locationTextField" destination="wyx-Pi-K7f" id="HUM-wU-fNA"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eTh-Nm-vRT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4015" y="934"/>
         </scene>
         <!--Table-->
         <scene sceneID="Zxp-ag-ewN">
@@ -248,5 +329,26 @@
             </objects>
             <point key="canvasLocation" x="1102" y="1335"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="MpW-5a-prY">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="sRD-ja-5iM" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="ue0-Pl-V44">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="pJY-5O-lDb" kind="relationship" relationship="rootViewController" id="hcP-yL-RhZ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Uoa-Lh-X0H" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2957.5999999999999" y="934.18290854572717"/>
+        </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="icv-Xg-anv"/>
+    </inferredMetricsTieBreakers>
 </document>
